--- a/css/bear.css
+++ b/css/bear.css
@@ -10,5 +10,6 @@ html {
 
 /* Write your solution here */
 @media only screen and (min-width: 1196px) {
-  .wrapper {width: 800px;}
+  #bear {
+    left: 800px;}
 }
